@@ -5,6 +5,7 @@ Version 0.2.0~dev
 	* Return False if there is an exception during plugin startup.
 	* Be more verbose when a check raises an exception.
 	* Use qsize to show work queue lenght.
+	* Do not kill plugin thread when a check fails to save its status.
 
 Version 0.1.1 Released on 2009/05/25
 
